feat: adapt server、optimize mobile header menu and config modal layout
- collapse header actions into a toggleable menu to reduce canvas occlusion
- fix mobile menu panel sizing and force horizontal text layout
- keep config modal actions visible with a sticky footer
- improve small-screen button spacing and interaction behavior